src/styles/lightbox.css
@tailwind components;

@layer components {
  #lightbox {
    display: flex;
    justify-content: space-between;
    align-items: center;
    position: fixed;
    width: 100vw;
    height: 100vh;
    max-width: 100vw;
    max-height: 100vh;
    left: 0;
    top: 0;
    z-index: -10;
    background: rgba(0, 0, 0, 0.9);
    backdrop-filter: blur(6px);
    opacity: 0;
    transition: opacity 0.5s;

    &.fade-in {
      opacity: 1;
      z-index: 100;
    }
    &.fade-out {
      opacity: 0;
      z-index: 100;
    }
    .close {
      @apply absolute right-2 top-2 flex items-center justify-center text-4xl text-white hover:text-gray-400;
      [astro-icon] {
        @apply h-8 w-8;
      }
    }
    .next-image,
    .prev-image {
      @apply flex items-center justify-center text-5xl text-white hover:text-gray-400;
      height: calc(100% - 25vh);
      [astro-icon] {
        @apply h-9 w-9;
      }
    }
    .prev-image {
      @apply ml-2;
    }
    .next-image {
      @apply mr-2;
    }
    .content-container {
      @apply flex flex-auto flex-col items-center justify-around self-stretch;
      figure {
        width: 80%;
      }
      img {
        @apply rounded-lg;
        max-height: calc(100vh - 6rem);
        width: 100%;
      }
      iframe {
        @apply rounded-lg;
        max-height: calc(100vh - 6rem);
        width: 80%;
        height: 80%;
        background: white;
      }
      .source-code-url {
        @apply text-blue-700 underline hover:text-blue-900;
        @apply dark:text-cyan-200 dark:hover:text-cyan-400;
        @apply mt-2;
        @apply transition-colors;
      }
    }
    figure figcaption {
      @apply mt-2 text-center text-xl italic text-white;
    }
  }
}

